--- a/Agence/templates/header.html
+++ b/Agence/templates/header.html
@@ -76,7 +76,10 @@
       .btn-primary {
         background-color: #007bff;
       }
-      
+      ul.messages li.error {
+        color: red;
+    }
+    
       
     </style>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
