--- a/Agence/templates/my_resume.html
+++ b/Agence/templates/my_resume.html
@@ -80,7 +80,7 @@ My resume
                     </fieldset>
                     <div class="submit-row">
     
-                        <input type="submit" value="Save" class="default" name="_save">
+                        <input class="btn btn-primary" type="submit" value="save" style="margin-bottom: 10px; background-color: #007bff;">
                         
                     </div>
                     
