--- a/Agence/templates/Agence/add_company.html
+++ b/Agence/templates/Agence/add_company.html
@@ -29,6 +29,13 @@ Add company
                             <div class="invalid-feedback">
                                 Please provide the email.
                               </div>
+                              {% if messages %}
+                            <ul class="messages">
+                            {% for message in messages %}
+                              <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                                </ul>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="form-row field-creation_date">
