--- a/Agence/templates/signup_com.html
+++ b/Agence/templates/signup_com.html
@@ -22,6 +22,13 @@ Sign Up
       <div class="invalid-feedback">
         Please provide your email.
       </div>
+      {% if messages %}
+      <ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+    </ul>
+    {% endif %}
     </div>
     <div class="col-md-3 mb-2">
       <label for="validationCustom03" class="required">Password</label>
